added shortcuts key from keyborad

--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
       </div>
       <audio src="/Music/aaj_ki_rat.mp3" id="audio"></audio>
     </conatainer>
+    <input type="range" id="volume" min="0" max="1" step="0.01" value="1" />
   </body>
 </html>
